--- a/.github/workflows/broken-links-site.yml
+++ b/.github/workflows/broken-links-site.yml
@@ -45,3 +45,9 @@ jobs:
           fail: true
           # only check local links
           args: --offline --remap '_site(/?.*)/assets/(.*) _site/assets/$2' --verbose --no-progress '_site/**/*.html'
+          debug: false
+          format: markdown
+          jobSummary: true
+          lycheeVersion: 0.14.0
+          output: lychee/out.md
+          token: ***
